# sheep-and-wolves

./: CMakeLists.txt  README.md  drawarea.cpp  drawarea.h  main.cpp  main.h  unite1.cpp  unite1.h  unite2.cpp  unite2.h  unite3.cpp  unite3.h  unite4.cpp  unite4.h
